added the first blog

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .sojol{
             width: 400px;
             height: 400px;
-            background-color: yellowgreen;
+            background-color: rgb(55, 0, 255);
             border: 3px solid red;
             border-radius: 5px;
         }
